home-assistant/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:stable
        ports:
          - containerPort: 8123
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: home-assistant-config
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
      restartPolicy: Always
      volumes:
        - name: home-assistant-config
          persistentVolumeClaim:
            claimName: home-assistant-config
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
