home-assistant/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hass.home.coleduclos.io`)
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: home-assistant-ingressroute-certificate-secret
