home-assistant/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  ingressClassName: traefik
  rules:
  - host: ha.localdomain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: home-assistant
            port:
              number: 8123
